--- a/lodash/package.json
+++ b/lodash/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "sleep": "^5.1.1"
   }
 }
