--- a/express/package.json
+++ b/express/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "jade": "^1.11.0"
   }
 }
