--- a/electron/package.json
+++ b/electron/package.json
@@ -1,11 +1,11 @@
 {
   "name": "electron-experiments",
   "version": "1.0.0",
-  "main": "build/index.js",
+  "main": "build/electron-app-init.js",
   "scripts": {
     "clean": "node_modules/.bin/rimraf build",
     "compile": "node_modules/.bin/tsc --pretty",
-    "start": "npm run compile && ./node_modules/.bin/electron . &",
+    "start": "npm run clean-compile && ./node_modules/.bin/electron . &",
     "compile-watch": "node_modules/.bin/tsc --pretty -w",
     "clean-compile": "npm run clean && npm run compile",
     "test": "npm run clean-compile && node_modules/.bin/mocha 'build/tests/**/*Test.js'",
@@ -24,9 +24,10 @@
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
-    "sinon": "^4.0.1",
     "@types/mocha": "^2.2.43",
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "devtron": "^1.4.0",
+    "mocha": "^4.0.1",
+    "sinon": "^4.0.1"
   }
 }
