--- a/vue-typescript/package.json
+++ b/vue-typescript/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "vue-typescript",
-  "description": "A Vue.js project",
+  "name": "vue-typescript-experiments",
   "version": "1.0.0",
-  "author": "Rémi Passmoilesel <remi.passmoilesel@gmail.com>",
-  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "clean": "node_modules/.bin/rimraf build",
+    "compile": "node_modules/.bin/tsc --pretty",
+    "compile-watch": "node_modules/.bin/tsc --pretty -w",
+    "clean-compile": "npm run clean && npm run compile",
+    "test": "npm run clean-compile && node_modules/.bin/mocha 'build/tests/**/*Test.js'",
+    "pack": "node_modules/.bin/webpack"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "vue": "^2.4.4"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "ts-loader": "^3.0.5",
+    "tslint": "^5.8.0",
+    "typescript": "^2.5.3",
+    "vue": "^2.5.2",
+    "webpack": "^3.8.1"
   }
 }
