--- a/vue-typescript/package.json
+++ b/vue-typescript/package.json
@@ -14,10 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.4",
+    "vue": "^2.5.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.78",
+    "@types/vue": "^2.0.0",
     "ts-loader": "^3.0.5",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3",
-    "vue": "^2.5.2",
     "webpack": "^3.8.1"
   }
 }
