--- a/vue-typescript/tsconfig.json
+++ b/vue-typescript/tsconfig.json
@@ -1,15 +1,17 @@
 {
-
-  // Attention, modifier la configuration peut empêcher
-  // la compilation Typescript
-
   "compilerOptions": {
-    // alignement avec le support navigateur de Vue
-    "target": "es5",
-    // activation de la déduction stricte pour les propriétés de données sur `this`
-    "strict": true,
-    // si vous utilisez webpack 2+ ou rollup, permettre le tree shaking :
+    "lib": [
+      "dom",
+      "es5",
+      "es2015",
+      "es2015.promise"
+    ],
     "module": "es2015",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "target": "es5",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true
   }
 }
