--- a/vue-ts/package.json
+++ b/vue-ts/package.json
@@ -17,9 +17,13 @@
     "@types/webpack": "^3.0.13",
     "chai": "^4.1.2",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
     "html-loader": "^0.5.1",
     "mocha": "^4.0.1",
+    "node-sass": "^4.5.3",
     "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "ts-loader": "^3.0.5",
     "typescript": "^2.5.3",
     "vue-loader": "^13.3.0",
