--- a/vue-ts-template/package.json
+++ b/vue-ts-template/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "node_modules/.bin/webpack-dev-server --content-base .",
     "clean": "node_modules/.bin/rimraf build",
-    "compile": "node_modules/.bin/webpack",
-    "clean-compile": "npm run clean && npm run compile",
-    "test": "npm run clean-compile && node_modules/.bin/mocha 'dist/tests/**/*Test.js'"
+    "build": "node_modules/.bin/webpack",
+    "build-watch": "node_modules/.bin/webpack --progress --colors --watch",
+    "clean-build": "npm run clean && npm run build",
+    "test": "npm run clean-build && node_modules/.bin/mocha 'dist/tests/**/*Test.js'"
   },
   "author": "",
   "license": "ISC",
