--- a/vue-ts-template/tsconfig.json
+++ b/vue-ts-template/tsconfig.json
@@ -6,20 +6,9 @@
     "noImplicitReturns": true,
     "module": "es2015",
     "moduleResolution": "node",
-    "target": "es5"
-  },
-  "rules": {
-    "no-consecutive-blank-lines": false,
-    "no-console": false,
-    "prefer-const": false,
-    "no-unnecessary-initializer": false,
-    "no-angle-bracket-type-assertion": false,
-    "no-shadowed-variable": false,
-    "space-before-function-paren": false,
-    "only-arrow-functions": false,
-    "max-classes-per-file": false,
-    "member-ordering": false,
-    "quotemark": [true, "single", "avoid-escape", "avoid-template"]
+    "target": "es5",
+    "noImplicitAny": false,
+    "experimentalDecorators": true
   },
   "include": [
     "./src/**/*"
