--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pkg/hello-world-linux
 pkg/hello-world-macos
 package-lock.json
 build/
-!quasar-typescript/build
+!quasar-ts/build
 !vuetify-typescript-template/build
 dist/
 npm-debug.log
