--- a/electron/package.json
+++ b/electron/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "node_modules/.bin/rimraf build",
     "compile": "node_modules/.bin/tsc --pretty",
-    "start": "npm run clean-compile && ./node_modules/.bin/electron . &",
+    "start": "npm run clean-compile && electron .",
     "compile-watch": "node_modules/.bin/tsc --pretty -w",
     "clean-compile": "npm run clean && npm run compile",
     "test": "npm run clean-compile && node_modules/.bin/mocha 'build/tests/**/*Test.js'",
