--- a/front-server/package.json
+++ b/front-server/package.json
@@ -1,9 +1,10 @@
 {
   "name": "front-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Application manager for deployed libraries",
   "scripts": {
-    "start": "npm run compile && node build/index.js",
+    "start": "npm run compile && ./docker/start-example.sh",
+    "docker-launch": "npm run compile && ./docker/build-and-launch.sh",
     "clean": "./node_modules/.bin/rimraf build",
     "lint": "./node_modules/.bin/tslint --force --format verbose 'src/**/*.ts'",
     "lint-fix": "npm run lint -- --fix",
@@ -16,9 +17,11 @@
     "ejs": "^2.5.7",
     "express": "~4.15.2",
     "express-handlebars": "^3.0.0",
+    "fs-extra": "^4.0.3",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.39",
     "@types/lodash": "^4.14.88",
     "@types/node": "^8.0.0",
