--- a/keycloak-permissions/package.json
+++ b/keycloak-permissions/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "keycloak-admin-client": "^0.12.0",
-    "request-promise": "^4.2.2"
+    "lodash": "^4.17.4",
+    "request-promise": "^4.2.2",
+    "uuid": "^3.1.0"
   }
 }
