--- a/keycloak-permissions/package.json
+++ b/keycloak-permissions/package.json
@@ -23,6 +23,7 @@
     "mocha": "^4.0.1"
   },
   "dependencies": {
+    "f-promise": "^1.2.11",
     "keycloak-admin-client": "^0.12.0",
     "lodash": "^4.17.4",
     "request-promise": "^4.2.2",
