--- a/keycloak-permissions/package.json
+++ b/keycloak-permissions/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "f-promise": "^1.2.11",
+    "fs-extra": "^5.0.0",
     "keycloak-admin-client": "^0.12.0",
     "lodash": "^4.17.4",
     "request-promise": "^4.2.2",
