--- a/keycloak-permissions/package.json
+++ b/keycloak-permissions/package.json
@@ -19,8 +19,10 @@
   "devDependencies": {
     "@types/chai": "^4.0.8",
     "@types/node": "^8.0.57",
+    "@types/sinon": "^4.1.2",
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "sinon": "^4.1.3"
   },
   "dependencies": {
     "f-promise": "^1.2.11",
