--- a/karma/package.json
+++ b/karma/package.json
@@ -18,8 +18,10 @@
     "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "jsdom": "^11.11.0",
     "karma": "^2.0.2",
     "karma-chai": "^0.1.0",
+    "karma-jsdom-launcher": "^6.1.3",
     "karma-mocha": "^1.3.0",
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
